2007-12-20  Lutz Mueller <lutz@users.sourceforge.net>

	Updated translations by Translation Project Robot
	<robot@translationproject.org>:

	* po/[vi,pl].po: Updated files.

2007-12-18  Lutz Mueller <lutz@users.sourceforge.net>

	Dan Fandrich <dan@coneharvesters.com> pointed out the following:

	* configure.ac: Keep gettext requirement as low as 0.14.1.
	gettextize changes it automatically to 0.17, but as long as we don't
	know why, there is no need to enforce this version.

2007-12-16  Lutz Mueller <lutz@users.sourceforge.net>

	Marcus Meissner <marcus@jet.franken.de> pointed out the following:

	* libexif/exif-data.c: (exif_data_load_data_thumbnail) ExifLong is
	unsigned. Therefore no need to check for negative values. Check for
	sane offset instead.

2007-12-15  Lutz Mueller <lutz@users.sourceforge.net>

	* po/*.po: Updated po-files.
	* libexif/exif-data.c: (exif_data_load_data_thumbnail) guard against 
	negative size (in addition to negative offset), too.

2007-12-14  Lutz Mueller <lutz@users.sourceforge.net>

	Bug pointed out by Meder Kydyraliev, Google Security Team:

	* libexif/exif-data.c: (exif_data_load_data_thumbnail) Ignore bugus
	data.

2007-12-14  Lutz Mueller <lutz@users.sourceforge.net>

	* README: Point users to some tools needed to build libexif.
	* configure.ac: It looks like po/Makefile.in is already registered
	with AC_CONFIG_FILES (whatever this means).

2007-12-14  Lutz Mueller <lutz@users.sourceforge.net>

	Bug pointed out by Meder Kydyraliev, Google Security Team:

	* libexif/exif-loader.c: (exif_loader_write) Ignore buffers of
	zero length.

2007-12-07  Jan Patera <patera@users.sourceforge.net>

	* Added support for Fuji makernotes

2007-11-13  Dan Fandrich <dan@coneharvesters.com>
	* Added support for a new macro NO_VERBOSE_TAG_DATA to allow
	  some size reduction but still retain the ability to properly
	  interpret each tag.
	* Added an end-of-table marker in the Canon color_information