@@ -1,3 +1,10 @@
+2007-12-27  Lutz Mueller <lutz@users.sourceforge.net>
+
+	Suggestion by Andreas Kleinert <Andreas_Kleinert@gmx.de>:
+
+	* libexif/exif-entry.c: (exif_entry_get_value) Use %lf for double
+	instead of %f (which is for float).
+
 2007-12-20  Lutz Mueller <lutz@users.sourceforge.net>
 
 	Updated translations by Translation Project Robot
